--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -9,4 +9,10 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #关闭自我保护
 eureka.server.enable-self-preservation=false
+#eureka server清理无效节点的时间间隔，默认60000毫秒，即60秒
+eureka.server.eviction-interval-timer-in-ms=5000
+
+eureka.instance.prefer-ip-address=true
+
+eureka.client.service-url.defaultZone=http://localhost:8088/eureka/
 
