--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8090
 
 spring.application.name=eureka-demo-provider
+
+#表示eureka server至上一次收到client的心跳之后，等待下一次心跳的超时时间，在这个时间内若没收到下一次心跳，则将移除该instance
+eureka.instance.lease-expiration-duration-in-seconds=5
+#表示eureka client发送心跳给server端的频率，默认为30秒
+eureka.instance.lease-renewal-interval-in-seconds=5
+
 #注册到注册中心
 eureka.client.service-url.defaultZone=http://localhost:8088/eureka/
 
